<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="creationMenuPlaceholder" type="id" />
    <item name="contextualMenu" type="id" />
    <item name="itemList" type="id" />
    <item name="floatingMenu" type="id" />
    <item name="formPlaceholder" type="id" />
    <item name="menuContainer" type="id" />
    <item name="delete" type="id" />
    <item name="edit" type="id" />
    <item name="selectAll" type="id" />
    <item name="moveDown" type="id" />
    <item name="moveUp" type="id" />
</resources>