<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="recyclerView" type="id" />
    <item name="footer" type="id" />
</resources>