<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="noItemsLabel" type="id" />
    <item name="innerLayout" type="id" />
    <item name="monkey" type="id" />
    <item name="lion" type="id" />
    <item name="tiger" type="id" />
    <item name="wolf" type="id" />
    <item name="customView" type="id" />
</resources>